--- a/manifest.json
+++ b/manifest.json
@@ -67,6 +67,11 @@
       "code": "zh-cn",
       "name": "Chinese",
       "url": "lang/zh-cn.json"
+    },
+    {
+      "code": "ca",
+      "name": "Catalan",
+      "url": "lang/ca.json"
     }
   ]
 }
