--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "resources": "easyresources generate --worksheetName \"Personalized learning\" --outputPath \"lang\" --excludeLocalizations \"ar\""
+    "resources": "easyresources generate --worksheetName \"Personalized learning\" --outputPath \"lang\" --excludeLocalizations \"ar\"",
+    "start": "node_modules/.bin/gulp webserver"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "homepage": "https://github.com/easygenerator/simple",
   "devDependencies": {
     "del": "^1.0.0",
-    "event-stream": "^3.3.6",
+    "event-stream": "^3.3.5",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-bower": "0.0.14",
