--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "components-webfontloader": "~1.6.3",
-    "easygenerator-plugins": "#fix-chromebook-recognition",
+    "easygenerator-plugins": "*",
     "knockout-dragula": "~0.2.2",
     "jquery": "^3.2.1",
     "knockout": "^3.4.2"
